--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -34,7 +34,7 @@
  -->
 
 <div class="container" style="min-height: 859px">
-  <div class="page-header"><p class="h1 text-center"> 数据统计 </p></div>  
+  <div class="page-header"><p class="h1 text-center"> 数据统计结果 </p></div>  
   <p class="h4 text-right">用户信息：<%= current_user.email%></p>
   <table class="table table-striped">
     <thead>
