--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -33,7 +33,7 @@
 <div class="container" style="min-height: 875px">
 <div class="page-header">
 
-      <div class="span4"> <h1>所有问卷   <span class="badge"><%= @surveys.count%></span></h1> </div>
+      <div class="span4"> <h1>所有项目 <span class="badge"><%= @surveys.count%></span></h1> </div>
 
   </div>
 
