--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="" style="min-height: 830px">
+	<div class="page-header"><p class="h2 text-center">北京邮电大学</p> </div>
+	<div class="h1 text-center">欢迎使用教育研究可视化呈现工具！</div>
+</div>
