--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" >
       <ul class="nav navbar-nav ">
          <li><%= link_to '首页', home_index_path %></li>
-        <li><%= link_to '问卷', surveys_path%></li>
+        <li><%= link_to '项目', surveys_path%></li>
       </ul>
 
 
