--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,69 @@
-<div class="" style="min-height: 830px">
+<!-- <div class="" style="min-height: 830px">
 	<div class="page-header"><p class="h2 text-center">北京邮电大学</p> </div>
 	<div class="h1 text-center">欢迎使用教育研究可视化呈现工具！</div>
+</div> -->
+
+<div class="container" style="background-color: #f3f3f3">
+<div class="carousel slide" id="myCarousel" data-interval="5000" >
+	<ol class="carousel-indicators">
+		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		<li data-target="#myCarousel" data-slide-to="1" ></li>
+		<li data-target="#myCarousel" data-slide-to="2" ></li>
+	</ol>
+
+	<div class="carousel-inner">
+	      <div class="item active">
+	         <a href="#"><%= image_tag("home/hi1.jpg",width:"100%")%></a> 
+	         <div class="carousel-caption">
+	         	<p class="h2">创新方法</p>
+	         	<p class="h4">掌握创新原理，实践创新方法</p>
+	         </div>
+	      </div>
+	      <div class="item">
+	         <a href="#"><%= image_tag("home/hi2.jpg",width:"100%")%></a>
+	         <div class="carousel-caption">
+	         	<p class="h2">创新方法</p>
+	         	<p class="h4">掌握创新原理，实践创新方法</p>
+	         </div>
+	      </div>
+	      <div class="item">
+	         <a href="#"><%= image_tag("home/hi3.jpg",width:"100%")%></a>
+	         <div class="carousel-caption">
+	         	<p class="h2">创新方法</p>
+	         	<p class="h4">掌握创新原理，实践创新方法</p>
+	         </div>
+	      </div>
+	  </div>
+	   
+	    <a class="carousel-control left" href="#myCarousel" role="button" data-slide="prev">
+	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control right" href="#myCarousel" role="button" data-slide="next">
+	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+
+	  <!--<a class="carousel-control left" href="#myCarousel" 
+	      data-slide="prev">&lsaquo;</a>
+	   <a class="carousel-control right" href="#myCarousel" 
+	      data-slide="next">&rsaquo;</a>-->
+
+
+</div>
+</div>
+	
+
+
+<div style="background-color: #fff">
+<div class="container">
+	<div class="page-header">
+	 <p class="text-center h1"> 北京邮电大学</p>
+	</div>
+	<div class="jumbotron" >
+		  <h1>欢迎使用教育研究可视化呈现工具！</h1>
+		  <p style="line-height: 35px">北京科学学研究中心是北京市唯一一家以管理科学为核心的软科学研究市属事业单位，成立20多年来，主要研究方向聚焦在科技统计与分析学科、科技战略与政策学科、城市现代化学科，同时兼顾科技人才、区域发展、科技与经济等学科建设。大批研究成果和积累的丰厚资源，为北京市建设创新型城市，发展高端、高效、高辐射力产业与社会经济产业，首都区域创新体系建设，社会主义新农村建设提供了重要的科研和信息支撑， 也与首都社会经济建设紧密相连。</p>
+		  
+	</div>
+</div>
 </div>
